[package]
name = "rust-sdk-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ngrok = "0.14"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
futures = "0.3"
url = "2"
